<resources>
    <string name="app_name">My File Manager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_int_card">Home</string>
    <string name="navigation_drawer_ext_card">SD Card</string>

    <string name="action_settings">Settings</string>
    <string name="action_list_view">List View</string>
    <string name="action_grid_view">Grid View</string>

    <string name="delete_dialog_title">Are you sure you want to delete the following?</string>
    <string name="sort_dialog_title">Quick sort options</string>
    <string name="positive_response_button">Yes</string>
    <string name="negative_response_button">No</string>
    <string name="continue_response_button">Continue</string>
    <string name="cancel_response_button">Cancel</string>

    <string name="fab_cut">Cut</string>
    <string name="fab_fav">Add to quick links</string>
    <string name="fab_folderadd">Add new folder</string>
    <string name="fab_sort">Quick sort</string>
    <string name="fab_rename">Rename</string>
    <string name="fab_delete">Delete</string>
    <string name="fab_copy">Copy</string>
</resources>
